--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    	<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.12</version>
   </dependencies>
 
   <build>
